--- a/.github/workflows/backend-on-push.yml
+++ b/.github/workflows/backend-on-push.yml
@@ -6,16 +6,33 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  PHP_VERSION: '8.1'
+
 jobs:
+  phpstan:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: php-actions/composer@v6
+      - uses: php-actions/phpstan@v3
+        with:
+          path: src/
+          php_version: $DAY_OF_WEEK
+
   symfony-tests:
-      runs-on: ubuntu-latest
-      steps:
+    runs-on: ubuntu-latest
+    needs: phpstan
+    steps:
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: $DAY_OF_WEEK
+
       - uses: actions/checkout@v3
+
       - name: Copy .env.test.local
         run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
+
       - name: Cache Composer packages
         id: composer-cache
         uses: actions/cache@v3
@@ -24,12 +41,15 @@ jobs:
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-
+
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
       - name: Create Database
         run: |
           mkdir -p data
           touch data/database.sqlite
+
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         env:
           DATABASE_URL: sqlite:///%kernel.project_dir%/data/database.sqlite
