--- a/.github/workflows/backend-on-push.yml
+++ b/.github/workflows/backend-on-push.yml
@@ -14,11 +14,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-php-
+
       - uses: php-actions/composer@v6
+        with:
+          php_version: $PHP_VERSION
+          args: -d backend/
+
       - uses: php-actions/phpstan@v3
         with:
           path: src/
-          php_version: $DAY_OF_WEEK
+          php_version: $PHP_VERSION
 
   symfony-tests:
     runs-on: ubuntu-latest
@@ -26,24 +38,22 @@ jobs:
     steps:
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: $DAY_OF_WEEK
+          php-version: $PHP_VERSION
 
-      - uses: actions/checkout@v3
+#      - uses: actions/checkout@v3
 
       - name: Copy .env.test.local
         run: php -r "file_exists('.env.test.local') || copy('.env.test', '.env.test.local');"
 
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
-
-      - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+#      - uses: actions/cache@v3
+#        with:
+#          path: vendor
+#          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+#          restore-keys: |
+#            ${{ runner.os }}-php-
+#
+#      - name: Install Dependencies
+#        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Create Database
         run: |
