--- a/.github/workflows/backend-on-push.yml
+++ b/.github/workflows/backend-on-push.yml
@@ -6,14 +6,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
-env:
-  PHP_VERSION: '8.1'
-
 jobs:
   phpstan:
+    name: Code quality check
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        name: Repo checkout
 
       - uses: actions/cache@v3
         with:
