--- a/.github/workflows/backend-on-push.yml
+++ b/.github/workflows/backend-on-push.yml
@@ -23,14 +23,16 @@ jobs:
             ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
 
       - uses: php-actions/composer@v6
+        name: Composer install
         with:
-          php_version: ${{ env.PHP_VERSION }}
+          php_version: ${{ vars.PHP_VERSION }}
           args: -d backend/
 
       - uses: php-actions/phpstan@v3
+        name: PHPStan
         with:
           path: src/
-          php_version: ${{ env.PHP_VERSION }}
+          php_version: ${{ vars.PHP_VERSION }}
 
   symfony-tests:
     runs-on: ubuntu-latest
@@ -38,7 +40,7 @@ jobs:
     steps:
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ env.PHP_VERSION }}
+          php-version: ${{ vars.PHP_VERSION }}
 
 #      - uses: actions/checkout@v3
 
