--- a/.github/workflows/backend-on-push.yml
+++ b/.github/workflows/backend-on-push.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/cache@v3
         name: Caching
         with:
-          path: vendor
+          path: backend/vendor
           key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
