--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
         "ext-gd": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-zip": "*",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
