--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,8 +1,8 @@
+/public/bundles/
+/var/
+/vendor/
 /.env.local
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
-/public/bundles/
-/var
-/vendor
 /config/jwt/*.pem
