--- a/.github/workflows/backend-on-release.yml
+++ b/.github/workflows/backend-on-release.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          context: .
-          file: ./backend/Dockerfile
+          context: ./backend
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
