--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 FROM webdevops/php-nginx:8.1-alpine
 
 ENV WEB_DOCUMENT_ROOT '/usr/src/app'
+ENV LOG_STDOUT 'stdout'
+ENV LOG_STDERR 'stderr'
+
 EXPOSE 4201
 
 WORKDIR /usr/src/app
@@ -17,19 +20,9 @@ RUN chmod +x /usr/local/bin/wait-for-it
 
 # Setup web server
 RUN rm /opt/docker/etc/nginx/vhost.ssl.conf
-RUN chown -R application:application /usr/src/app
-
-# Switch to app user
-USER application
-
-# Regenerate secrets
-RUN sed "s/{REGENERATE_SECRET}/"$(openssl rand -hex 32)"/" .env.dist
 
 # Install stuff
 RUN composer install
 
-# Regenerate JWT keys
-RUN php bin/console lexik:jwt:generate-keypair -n
-
-# Dump .env
-RUN composer dump-env prod
+# Set user/group
+RUN chown -R $APPLICATION_UID:$APPLICATION_GID /usr/src/app
