--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -24,10 +24,18 @@ jobs:
         with:
           images: algirdasc/expensave-backend
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image (Backend)
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: ./backend
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image (Frontend)
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: ./frontend
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
