--- a/backend/composer.json
+++ b/backend/composer.json
@@ -46,8 +46,13 @@
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.2",
+        "phpunit/phpunit": "^9.5",
+        "phpunitgen/console": "^5.0",
         "roave/security-advisories": "dev-latest",
-        "symfony/maker-bundle": "^1.45"
+        "symfony/browser-kit": "6.2.*",
+        "symfony/css-selector": "6.2.*",
+        "symfony/maker-bundle": "^1.45",
+        "symfony/phpunit-bridge": "^6.3"
     },
     "config": {
         "allow-plugins": {
