--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "ng serve",
-    "analyze": "tslint --force -c tslint.json --project tsconfig.app.json",
+    "analyze": "eslint src/",
     "build": "ng build"
   },
   "private": true,
@@ -53,7 +53,6 @@
     "codelyzer": "^6.0.2",
     "eslint": "^8.28.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.3",
     "typescript": "~4.6.4"
   }
 }
