--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM webdevops/php-nginx:8.1-alpine
 
+ENV APP_ENV 'prod'
 ENV WEB_DOCUMENT_ROOT '/usr/src/app'
 ENV LOG_STDOUT 'stdout'
 ENV LOG_STDERR 'stderr'
@@ -8,7 +9,6 @@ WORKDIR /usr/src/app
 
 # Copy files
 COPY ./build/symfony-entrypoint.sh /entrypoint.d/symfony-entrypoint.sh
-COPY ./build/wait-for-it.sh /usr/local/bin/wait-for-it
 COPY ./build/nginx/vhost.conf /opt/docker/etc/nginx/vhost.conf
 COPY . /usr/src/app
 
@@ -20,7 +20,7 @@ RUN chmod +x /usr/local/bin/wait-for-it
 RUN rm /opt/docker/etc/nginx/vhost.ssl.conf
 
 # Install stuff
-RUN composer install
+RUN composer install --optimize-autoloader --no-interaction --no-progress
 
 # Set user/group
 RUN chown -R $APPLICATION_UID:$APPLICATION_GID /usr/src/app
