--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -14,6 +14,8 @@ services:
     _instanceof:
         App\Handler\Error\ErrorHandlerInterface:
             tags: ['app.handlers.error']
+        App\Handler\Request\TransformationHandlerInterface:
+            tags: ['app.handlers.request.transformation']
         App\Service\Statement\Import\Handler\StatementImportHandlerInterface:
             tags: ['app.statement.import.handlers']
 
