--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,9 +4,9 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
-        "ext-gd": "*",
+        "php": ">=8.2",
         "ext-ctype": "*",
+        "ext-gd": "*",
         "ext-iconv": "*",
         "ext-zip": "*",
         "doctrine/annotations": "^1.0",
@@ -29,6 +29,7 @@
         "symfony/framework-bundle": "6.2.*",
         "symfony/google-mailer": "6.2.*",
         "symfony/mailer": "6.2.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/property-access": "6.2.*",
         "symfony/property-info": "6.2.*",
         "symfony/proxy-manager-bridge": "6.2.*",
