jwt refresh token fix & currency fix

--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl": "https://api.expensave.cici.lt",
-  "currency": "EUR",
-  "locale": "lt"
+    "apiUrl": "http://localhost:8000",
+    "locale": "lt",
+    "currencyCode": "EUR"
 }
