--- a/backend/.env
+++ b/backend/.env
@@ -23,8 +23,8 @@ APP_SECRET={REGENERATE_SECRET}
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=8&charset=utf8mb4"
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
