--- a/backend/config/packages/gesdinet_jwt_refresh_token.yaml
+++ b/backend/config/packages/gesdinet_jwt_refresh_token.yaml
@@ -1,3 +1,4 @@
 gesdinet_jwt_refresh_token:
     refresh_token_class: App\Entity\RefreshToken
+    token_parameter_name: refreshToken
     single_use: true
