--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,15 +1,15 @@
 {
-  "background_color": "purple",
-  "description": "Shows random fox pictures. Hey, at least it isn't cats.",
+  "background_color": "blue",
+  "description": "Manage personal & family budget and expenses",
   "display": "fullscreen",
   "icons": [
     {
-      "src": "icon/fox-icon.png",
-      "sizes": "192x192",
+      "src": "assets/icons/icon-large.png",
+      "sizes": "600x600",
       "type": "image/png"
     }
   ],
-  "name": "Awesome fox pictures",
-  "short_name": "Foxes",
-  "start_url": "/pwa-examples/a2hs/index.html"
+  "name": "Expensave",
+  "short_name": "Expensave",
+  "start_url": "/"
 }
