--- a/backend/.env
+++ b/backend/.env
@@ -24,7 +24,7 @@ APP_SECRET={REGENERATE_SECRET}
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="sqlite:///%kernel.project_dir%/var/db/data.db"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
