--- a/backend/.env
+++ b/backend/.env
@@ -44,7 +44,7 @@ MAILER_DSN=smtp://localhost
 ###< symfony/google-mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN=http://localhost:4200
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
