--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -5,5 +5,5 @@ nelmio_cors:
             origin_regex: true
             allow_origin: ['%env(CORS_ALLOW_ORIGIN)%']
             allow_methods: ['GET', 'POST', 'PUT', 'DELETE']
-            allow_headers: ['Content-Type', 'Authorization']
+            allow_headers: ['*']
             max_age: 3600
