--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -5,7 +5,7 @@ include /etc/nginx/modules-enabled/*.conf;
 
 events {
         worker_connections 768;
-        # multi_accept on;
+        multi_accept on;
 }
 
 http {
@@ -14,32 +14,13 @@ http {
         types_hash_max_size 2048;
         server_tokens off;
 
-        # server_names_hash_bucket_size 64;
-        # server_name_in_redirect off;
-
         include /etc/nginx/mime.types;
         default_type application/octet-stream;
 
-        ##
-        # SSL Settings
-        ##
-
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-        ssl_prefer_server_ciphers on;
-
-        ##
-        # Logging Settings
-        ##
-
-        access_log /var/log/nginx/access.log;
+        access_log off;
         error_log /var/log/nginx/error.log;
 
-        ##
-        # Gzip Settings
-        ##
-
         gzip on;
-
         # gzip_vary on;
         # gzip_proxied any;
         # gzip_comp_level 6;
@@ -47,9 +28,10 @@ http {
         # gzip_http_version 1.1;
         # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-        ##
-        # Virtual Host Configs
-        ##
+        set_real_ip_from  172.17.0.0/24;
+        set_real_ip_from  unix:;
+        real_ip_header    X-Forwarded-For;
+        real_ip_recursive on;
 
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
