--- a/docker/nginx/sites-enabled/backend-vhost.conf
+++ b/docker/nginx/sites-enabled/backend-vhost.conf
@@ -11,10 +11,7 @@ server {
     }
 
     location ~ ^/index\.php(/|$) {
-            fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
-
-            # when PHP-FPM is configured to use TCP
-            # fastcgi_pass 127.0.0.1:9000;
+            fastcgi_pass 127.0.0.1:9000;
 
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             include fastcgi_params;
@@ -25,8 +22,6 @@ server {
             internal;
     }
 
-    # return 404 for all other php files not matching the front controller
-    # this prevents access to other php files you don't want to be accessible.
     location ~ \.php$ {
         return 404;
     }
