--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -1,5 +1,13 @@
 [supervisord]
-nodaemon=true
+childlogdir=/tmp
+pidfile=/var/run/supervisord.pid
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock
 
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g 'daemon off;'
