--- a/backend/.env
+++ b/backend/.env
@@ -17,6 +17,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=prod
 APP_SECRET={REGENERATE_SECRET}
+DATA_DIR=%kernel.project_dir%/var/data
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -24,7 +25,7 @@ APP_SECRET={REGENERATE_SECRET}
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="mysql://expensave:expensave@database:3306/expensave?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="sqlite:///%kernel.project_dir%/var/db/data.db"
+DATABASE_URL="sqlite:///%env(resolve:DATA_DIR)%/expenses.db"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -44,7 +45,7 @@ MAILER_DSN=smtp://localhost
 ###< symfony/google-mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=http://localhost:4200
+CORS_ALLOW_ORIGIN=http://localhost:18002
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
