--- a/docker/php/php-fpm.conf
+++ b/docker/php/php-fpm.conf
@@ -1,5 +1,7 @@
 [global]
 error_log = /proc/self/fd/2
 daemonize = no
+decorate_workers_output = no
+log_limit = 8192
 events.mechanism = epoll
 include = /etc/php/8.2/fpm/pool.d/*.conf
