--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,9 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
-              "node_modules/@nebular/theme/styles/prebuilt/default.css"
+              "src/styles.scss"
             ],
             "scripts": [],
             "vendorChunk": true,
