--- a/frontend/src/assets/config.json
+++ b/frontend/src/assets/config.json
@@ -1,5 +1,5 @@
 {
-    "apiUrl": "http://nl.sylius.local:18001",
+    "apiUrl": "http://localhost:18001",
     "locale": "lt",
     "currencyCode": "EUR"
 }
