full migration to mysql

--- a/docker/php/pool.d/www.conf
+++ b/docker/php/pool.d/www.conf
@@ -22,5 +22,4 @@ catch_workers_output = yes
 request_terminate_timeout = 3600
 
 ; allow long plain logging
-;decorate_workers_output = no
-;log_limit = 0
+decorate_workers_output = no
