--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -6,11 +6,21 @@ stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
-[supervisorctl]
-serverurl=unix:///var/run/supervisor.sock
-
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g 'daemon off;'
+process_name=%(program_name)s_%(process_num)02d
+numprocs=1
+autostart=true
+autorestart=true
+startsecs=0
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+[program:mariadb]
+command=/usr/sbin/mysqld
+user=mysql
+group=mysql
 process_name=%(program_name)s_%(process_num)02d
 numprocs=1
 autostart=true
