--- a/backend/.env
+++ b/backend/.env
@@ -40,7 +40,7 @@ MAILER_DSN=smtp://localhost
 ###< symfony/google-mailer ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=http://localhost:18002
+CORS_ALLOW_ORIGIN=http://expensave.frontend:18002
 ###< nelmio/cors-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
