--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -18,7 +18,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:mariadb]
-command=/usr/sbin/start_mysql.sh
+command=/usr/sbin/mysqld
 user=mysql
 group=mysql
 process_name=%(program_name)s_%(process_num)02d
