--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -8,6 +8,7 @@ stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g 'daemon off;'
+priority=5
 process_name=%(program_name)s_%(process_num)02d
 numprocs=1
 autostart=true
@@ -19,6 +20,7 @@ stdout_logfile_maxbytes=0
 
 [program:mariadb]
 command=/usr/sbin/mysqld
+priority=1
 user=mysql
 group=mysql
 process_name=%(program_name)s_%(process_num)02d
@@ -32,11 +34,22 @@ stdout_logfile_maxbytes=0
 
 [program:php-fpm]
 command=php-fpm8.2 -R -F -c /etc/php/8.2/fpm/php-fpm.conf
+priority=2
 process_name=%(program_name)s_%(process_num)02d
 numprocs=1
 autostart=true
 autorestart=true
 startsecs=0
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+[program:boot]
+command=/boot.sh
+priority=4
+startsecs=0
+autorestart=false
+startretries=1
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
