--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.2",
     "class-transformer": "^0.5.1",
     "eva-icons": "^1.1.3",
+    "js-sha256": "^0.11.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~6.6.7",
     "stream-http": "^3.2.0",
@@ -50,7 +51,6 @@
     "@types/node": "~8.9.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "codelyzer": "^6.0.2",
     "eslint": "^8.57.0",
     "ts-node": "~7.0.0",
     "typescript": "~5.4.2"
