--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -1,15 +1,21 @@
 {
-  "background_color": "blue",
-  "description": "Manage personal & family budget and expenses",
-  "display": "fullscreen",
-  "icons": [
-    {
-      "src": "assets/icons/icon-large.png",
-      "sizes": "600x600",
-      "type": "image/png"
-    }
-  ],
-  "name": "Expensave",
-  "short_name": "Expensave",
-  "start_url": "/"
+    "background_color": "blue",
+    "description": "Manage personal & family budget and expenses",
+    "display": "standalone",
+    "orientation": "portrait",
+    "icons": [
+        {
+            "src": "/assets/favicon/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/assets/favicon/android-chrome-256x256.png",
+            "sizes": "256x256",
+            "type": "image/png"
+        }
+    ],
+    "name": "Expensave",
+    "short_name": "Expensave",
+    "start_url": "/"
 }
