--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -30,9 +30,9 @@ jobs:
           php phpcs.phar --version
       - uses: thenabeel/action-phpcs@v8
         with:
-          files: "./backend/**.php"
+          files: "**.php"
           phpcs_path: php phpcs.phar
-          standard: "./backend/phpcs.xml"
+          standard: phpcs.xml
 
   phpunit:
     runs-on: ubuntu-latest
