--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -22,16 +22,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: php-actions/composer@v6
         with:
-          fetch-depth: 0 # important!
-      - name: Install PHP_CodeSniffer
-        run: |
-          curl -OL https://squizlabs.github.io/PHP_CodeSniffer/phpcs.phar
-          php phpcs.phar --version
-      - uses: thenabeel/action-phpcs@v8
+          args: --profile --ignore-platform-reqs
+          working_dir: ./backend
+      - uses: php-actions/phpcs@v1
         with:
-          files: "**.php"
-          phpcs_path: php phpcs.phar
+          path: ./backend
           standard: phpcs.xml
 
   phpunit:
