--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -4,22 +4,21 @@ on: [push, pull_request]
 
 jobs:
   psalm:
-    name: Psalm check
+    name: PHPStan check
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
-      - name: Psalm check
-        uses: docker://ghcr.io/psalm/psalm-github-actions
+      - name: Change working dir
+        run: |
+          ls -lah
+          cd backend
+      - name: Composer
+        uses: php-actions/composer@v6
         with:
-          relative_dir: ./backend
-          security_analysis: true
-          composer_ignore_platform_reqs: true
-#          report_file: results.sarif
-#      - name: Upload Security Analysis results to GitHub
-#        uses: github/codeql-action/upload-sarif@v2
-#        with:
-#          sarif_file: results.sarif
+          args: --profile --ignore-platform-reqs
+      - name: Run PHPStan
+        uses: php-actions/phpstan@v3
 
   phpcs:
     name: PHPCS check
@@ -32,7 +31,7 @@ jobs:
         with:
           args: --profile --ignore-platform-reqs
           working_dir: ./backend
-      - name: PHPCS
+      - name: Run PHPCS
         uses: php-actions/phpcs@v1
         with:
           basepath: ./backend/
@@ -50,7 +49,7 @@ jobs:
         with:
           args: --profile --ignore-platform-reqs
           working_dir: ./backend
-      - name: PHPUnit
+      - name: Run PHPUnit
         uses: php-actions/phpunit@v3
         with:
           php_extensions: "xdebug"
