--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -17,6 +17,7 @@ jobs:
         uses: php-actions/composer@v6
         with:
           args: --profile --ignore-platform-reqs
+          working_dir: .
       - name: Run PHPStan
         uses: php-actions/phpstan@v3
 
