--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -9,16 +9,20 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
-      - name: Change working dir
+        with:
+          sparse-checkout: 'backend/'
+          sparse-checkout-cone-mode: false
+      - name: Move backend to root
         run: |
-          pwd
           ls -lah
-          cd backend
+          mv backend/* .
+          rm -rf backend/
+          ls -lah
       - name: Composer
         uses: php-actions/composer@v6
         with:
           args: --profile --ignore-platform-reqs
-          working_dir: ./backend
+          working_dir: ./
       - name: Run PHPStan
         uses: php-actions/phpstan@v3
 
