--- a/.github/workflows/on-push-code-quality.yml
+++ b/.github/workflows/on-push-code-quality.yml
@@ -20,6 +20,7 @@ jobs:
           mv backend/* .
           rm -rf backend/
           ls -lah
+          pwd
       - name: Composer
         uses: php-actions/composer@v6
         with:
