--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,11 @@ on:
     types: [published]
 
 jobs:
+  tests:
+    uses: ./.github/workflows/code-quality.yml
   push-to-registry:
     name: Build & push image to Docker Hub
+    needs: code-quality
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
