--- a/backend/composer.json
+++ b/backend/composer.json
@@ -91,7 +91,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "cache:warmup": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
