--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,18 +20,21 @@ jobs:
           shopt -s dotglob
           mv backend/* ./
           rm -rf backend/
-          mkdir -p var/cache
       - name: Composer
         uses: php-actions/composer@v6
         with:
           args: --profile --ignore-platform-reqs
-      - name: Run PHPStan
-        uses: php-actions/phpstan@v3
       - name: Run PHPCS
         uses: php-actions/phpcs@v1
         with:
           path: ./src/
           args: -d memory_limit=-1
+      - run: |
+          ls -lah var/
+          ls -lah var/cache/
+          ls -lah var/cache/dev/
+      - name: Run PHPStan
+        uses: php-actions/phpstan@v3
       - name: Run PHPUnit
         uses: php-actions/phpunit@v3
         with:
