--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -46,6 +46,14 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
+        with:
+          sparse-checkout: 'frontend/'
+          sparse-checkout-cone-mode: false
+      - name: Move frontend to root
+        run: |
+          shopt -s dotglob
+          mv frontend/* ./
+          rm -rf frontend/
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
