--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,39 +22,34 @@
         "phpoffice/phpspreadsheet": "^1.27",
         "phpstan/phpdoc-parser": "^1.11",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "6.2.*",
-        "symfony/console": "6.2.*",
-        "symfony/dotenv": "6.2.*",
-        "symfony/expression-language": "6.2.*",
+        "symfony/asset": "7.0.*",
+        "symfony/console": "7.0.*",
+        "symfony/dotenv": "7.0.*",
+        "symfony/expression-language": "7.0.*",
         "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.2.*",
-        "symfony/google-mailer": "6.2.*",
-        "symfony/mailer": "6.2.*",
+        "symfony/framework-bundle": "7.0.*",
+        "symfony/google-mailer": "7.0.*",
+        "symfony/mailer": "7.0.*",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/property-access": "6.2.*",
-        "symfony/property-info": "6.2.*",
-        "symfony/proxy-manager-bridge": "6.2.*",
-        "symfony/rate-limiter": "6.2.*",
-        "symfony/runtime": "6.2.*",
-        "symfony/security-bundle": "6.2.*",
-        "symfony/serializer": "6.2.*",
-        "symfony/twig-bundle": "6.2.*",
-        "symfony/validator": "6.2.*",
-        "symfony/yaml": "6.2.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfony/property-access": "7.0.*",
+        "symfony/property-info": "7.0.*",
+        "symfony/rate-limiter": "7.0.*",
+        "symfony/runtime": "7.0.*",
+        "symfony/security-bundle": "7.0.*",
+        "symfony/serializer": "7.0.*",
+        "symfony/validator": "7.0.*",
+        "symfony/yaml": "7.0.*"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.2",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.2",
         "phpunit/phpunit": "^9.5",
-        "phpunitgen/console": "^5.0",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "6.2.*",
-        "symfony/css-selector": "6.2.*",
+        "symfony/browser-kit": "7.0.*",
+        "symfony/css-selector": "7.0.*",
         "symfony/maker-bundle": "^1.45",
-        "symfony/phpunit-bridge": "^6.3"
+        "symfony/phpunit-bridge": "7.0.*"
     },
     "config": {
         "allow-plugins": {
@@ -107,7 +102,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "7.2.*",
+            "require": "7.0.*",
             "docker": true
         }
     }
