github release actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,13 +5,13 @@ on:
     types: [published]
 
 jobs:
-  tests:
+  code-quality:
     uses: ./.github/workflows/code-quality.yml
   push-to-registry:
     name: Build & push image to Docker Hub
-    needs:
-      - backend-code-quality
-      - frontend-code-quality
+#    needs:
+#      - backend-code-quality
+#      - frontend-code-quality
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
