github actions fixes

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,12 @@ on:
 
 jobs:
   code-quality:
+    name: Run quality checks
     uses: ./.github/workflows/code-quality.yml
   push-to-registry:
     name: Build & push image to Docker Hub
-#    needs:
-#      - backend-code-quality
-#      - frontend-code-quality
+    needs:
+      - code-quality
     runs-on: ubuntu-latest
     steps:
       - name: Check out repo
