Extract ENV to frontend config

--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -8,7 +8,7 @@ stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx -c /etc/nginx/nginx.conf -g 'daemon off;'
-priority=5
+priority=6
 process_name=%(program_name)s_%(process_num)02d
 numprocs=1
 autostart=true
@@ -45,8 +45,18 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:boot]
-command=/boot.sh
+command=/boot-backend.sh
 priority=4
+startsecs=0
+autorestart=false
+startretries=1
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
+[program:boot]
+command=/boot-frontend.sh
+priority=5
 startsecs=0
 autorestart=false
 startretries=1
