moved whole application to single virtual host, no more CORS hassle

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -33,6 +33,8 @@ http {
         real_ip_header    X-Forwarded-For;
         real_ip_recursive on;
 
+        index index.html index.php;
+
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*;
 }
