--- a/docker/supervisor/supervisor.conf
+++ b/docker/supervisor/supervisor.conf
@@ -44,7 +44,7 @@ redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
-[program:boot]
+[program:boot-backend]
 command=/boot-backend.sh
 priority=4
 startsecs=0
@@ -54,7 +54,7 @@ redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
-[program:boot]
+[program:boot-frontend]
 command=/boot-frontend.sh
 priority=5
 startsecs=0
