--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -3,4 +3,5 @@ controllers:
     type: attribute
 
 api_refresh_token:
-    path: /auth/refresh-token
+    path: /api/auth/refresh-token
+#    methods: GET|POST
