--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -25,3 +25,7 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+    App\EventListener\CORSResponseListener:
+        arguments:
+            $environment: '%kernel.environment%'
