calendar dialog fixes

--- a/backend/.env
+++ b/backend/.env
@@ -21,7 +21,7 @@ TZ=Europe/Vilnius
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://expensave:expensave@localhost:3306/expensave?serverVersion=10&charset=utf8mb4"
+DATABASE_URL="mysql://expensave:expensave@localhost:3306/expensave?serverVersion=mariadb-10.6&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/lock ###
