serializer bug workaround

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -35,7 +35,7 @@
         "symfony/rate-limiter": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
-        "symfony/serializer": "7.0.*",
+        "symfony/serializer": "~7.0.7@dev",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
