--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,11 @@
     "@nebular/theme": "^13.0.0",
     "angular-resize-event": "git+https://git@github.com/dereekb/angular-resize-event#00ef5139ccd6a02f0afd7639ae1bd365ac8b13f9",
     "bootstrap": "^5.2.2",
+    "chart.js": "^4.4.2",
     "class-transformer": "^0.5.1",
     "eva-icons": "^1.1.3",
     "js-sha256": "^0.11.0",
+    "ng2-charts": "^6.0.0",
     "path-browserify": "^1.0.1",
     "rxjs": "~6.6.7",
     "stream-http": "^3.2.0",
