user registration disable

--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     timezone: '%env(TZ)%'
+    registrationDisabled: '%env(bool:default::REGISTRATION_DISABLED)%'
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +30,4 @@ services:
     App\EventListener\CORSResponseListener:
         arguments:
             $environment: '%kernel.environment%'
+
