--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,60 +1,62 @@
 {
-  "name": "expensave-frontend",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
-    "analyze": "eslint src/",
-    "build": "ng build --configuration production"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^17.3.9",
-    "@angular/cdk": "^17.3.9",
-    "@angular/common": "^17.3.9",
-    "@angular/compiler": "^17.3.9",
-    "@angular/core": "^17.3.9",
-    "@angular/forms": "^17.3.9",
-    "@angular/platform-browser": "^17.3.9",
-    "@angular/platform-browser-dynamic": "^17.3.9",
-    "@angular/router": "^17.3.9",
-    "@nebular/auth": "^13.0.0",
-    "@nebular/eva-icons": "^13.0.0",
-    "@nebular/theme": "^13.0.0",
-    "angular-resize-event": "git+https://git@github.com/dereekb/angular-resize-event#00ef5139ccd6a02f0afd7639ae1bd365ac8b13f9",
-    "bootstrap": "^5.2.2",
-    "chart.js": "^4.4.3",
-    "class-transformer": "^0.5.1",
-    "eva-icons": "^1.1.3",
-    "js-sha256": "^0.11.0",
-    "ng2-charts": "^6.0.1",
-    "path-browserify": "^1.0.1",
-    "rxjs": "~6.6.7",
-    "stream-http": "^3.2.0",
-    "timers-browserify": "^2.0.12",
-    "tslib": "^2.0.0",
-    "url": "^0.11.0",
-    "util": "^0.12.5",
-    "zone.js": "~0.14.6"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.7",
-    "@angular-eslint/builder": "17.4.1",
-    "@angular-eslint/eslint-plugin": "17.4.1",
-    "@angular-eslint/eslint-plugin-template": "17.4.1",
-    "@angular-eslint/schematics": "17.4.1",
-    "@angular-eslint/template-parser": "17.4.1",
-    "@angular/cli": "^17.3.7",
-    "@angular/compiler-cli": "^17.3.9",
-    "@angular/language-service": "^17.3.9",
-    "@angular/localize": "^17.3.9",
-    "@schematics/angular": "^10.1.3",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
-    "eslint": "^8.57.0",
-    "ts-node": "~7.0.0",
-    "typescript": "~5.4.5"
-  }
+    "name": "expensave-frontend",
+    "version": "1.2.0",
+    "scripts": {
+        "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
+        "analyze": "eslint src/",
+        "build": "ng build --configuration production",
+        "version": "",
+        "postversion": "git push && git push --tags && npm publish"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^17.3.9",
+        "@angular/cdk": "^17.3.9",
+        "@angular/common": "^17.3.9",
+        "@angular/compiler": "^17.3.9",
+        "@angular/core": "^17.3.9",
+        "@angular/forms": "^17.3.9",
+        "@angular/platform-browser": "^17.3.9",
+        "@angular/platform-browser-dynamic": "^17.3.9",
+        "@angular/router": "^17.3.9",
+        "@nebular/auth": "^13.0.0",
+        "@nebular/eva-icons": "^13.0.0",
+        "@nebular/theme": "^13.0.0",
+        "angular-resize-event": "git+https://git@github.com/dereekb/angular-resize-event#00ef5139ccd6a02f0afd7639ae1bd365ac8b13f9",
+        "bootstrap": "^5.2.2",
+        "chart.js": "^4.4.3",
+        "class-transformer": "^0.5.1",
+        "eva-icons": "^1.1.3",
+        "js-sha256": "^0.11.0",
+        "ng2-charts": "^6.0.1",
+        "path-browserify": "^1.0.1",
+        "rxjs": "~6.6.7",
+        "stream-http": "^3.2.0",
+        "timers-browserify": "^2.0.12",
+        "tslib": "^2.0.0",
+        "url": "^0.11.0",
+        "util": "^0.12.5",
+        "zone.js": "~0.14.6"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^17.3.7",
+        "@angular-eslint/builder": "17.4.1",
+        "@angular-eslint/eslint-plugin": "17.4.1",
+        "@angular-eslint/eslint-plugin-template": "17.4.1",
+        "@angular-eslint/schematics": "17.4.1",
+        "@angular-eslint/template-parser": "17.4.1",
+        "@angular/cli": "^17.3.7",
+        "@angular/compiler-cli": "^17.3.9",
+        "@angular/language-service": "^17.3.9",
+        "@angular/localize": "^17.3.9",
+        "@schematics/angular": "^10.1.3",
+        "@types/jasmine": "~3.6.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
+        "@typescript-eslint/eslint-plugin": "^7.9.0",
+        "@typescript-eslint/parser": "^7.9.0",
+        "eslint": "^8.57.0",
+        "ts-node": "~7.0.0",
+        "typescript": "~5.4.5"
+    }
 }
