--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,45 +1,47 @@
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "downlevelIteration": true,
-    "experimentalDecorators": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "skipLibCheck": true,
-    "paths": {
-      "timers": [
-        "node_modules/timers-browserify"
-      ],
-      "path": [
-        "node_modules/path-browserify"
-      ],
-      "util": [
-        "node_modules/util"
-      ],
-      "stream-http": [
-        "node_modules/stream-http"
-      ],
-      "url": [
-        "node_modules/url"
-      ]
+    "compileOnSave": false,
+    "compilerOptions": {
+        "baseUrl": "./",
+        "outDir": "./dist/out-tsc",
+        "sourceMap": true,
+        "declaration": false,
+        "downlevelIteration": true,
+        "experimentalDecorators": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "importHelpers": true,
+        "target": "ES2022",
+        "allowSyntheticDefaultImports": true,
+        "resolveJsonModule": true,
+        "typeRoots": [
+            "node_modules/@types"
+        ],
+        "lib": [
+            "es2018",
+            "dom"
+        ],
+        "skipLibCheck": true,
+        "paths": {
+            "timers": [
+                "node_modules/timers-browserify"
+            ],
+            "path": [
+                "node_modules/path-browserify"
+            ],
+            "util": [
+                "node_modules/util"
+            ],
+            "stream-http": [
+                "node_modules/stream-http"
+            ],
+            "url": [
+                "node_modules/url"
+            ]
+        },
+        "useDefineForClassFields": false
     },
-    "useDefineForClassFields": false
-  },
-  "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true
-  }
+    "angularCompilerOptions": {
+        "fullTemplateTypeCheck": true,
+        "strictInjectionParameters": true
+    }
 }
