--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,7 @@
     "scripts": {
         "dev": "ng serve --host 0.0.0.0 --port 18002 --disable-host-check",
         "analyze": "eslint src/",
-        "build": "ng build --configuration production",
-        "version": "",
-        "postversion": "git push && git push --tags && npm publish"
+        "build": "ng build --configuration production"
     },
     "private": true,
     "dependencies": {
